# Lightweight-Fault-Detectio

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
data/: README.md
data/manifests/: test.csv  train.csv  val.csv
docs/: chat_review_audit_2026-07-21.md  migration_plan.md  tstks_method.md
reports/: current_code_audit.md  data_pipeline_report.md  legacy_result_registry.csv
scripts/: build_cwru_manifests.py
src/ctgsd/: __init__.py
src/ctgsd/data/: __init__.py  cwru.py  paired_dataset.py  schema.py  split_by_source.py  windowing.py
src/ctgsd/features/: __init__.py  tstks.py
src/ctgsd/preprocessing/: __init__.py  scaling.py
tests/: test_data_isolation.py  test_manifest_validity.py  test_scaler_train_only.py  test_schema.py  test_split_leakage.py  test_tstks.py  test_window_pairing.py
