[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ctgsd-fault-diagnosis"
version = "0.1.0"
description = "Cost-constrained teacher-guided sparse distillation for lightweight fault diagnosis"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "scikit-learn>=1.4,<2",
  "PyWavelets>=1.5,<2",
  "PyYAML>=6,<7",
  "joblib>=1.3,<2",
]

[project.optional-dependencies]
train = [
  "tensorflow>=2.15,<2.18; python_version < '3.12'",
]
plot = [
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
]
dev = [
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

